<?xml version="1.0"?>
<package  format="2">
  <name>message_tests</name>
  <version>0.0.1</version>
  <description>
    Examples from A Gentle Introduction to ROS
  </description>
  <maintainer email="espinoza26122802@gmail.com">
    Jason O'Kane
  </maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend> 
  <build_export_depend>message_runtime</build_export_depend>


  <exec_depend>message_runtime</exec_depend>

  <!-- DE LA PRACTICA 2: DEPENCENCIAS (PARA EL EJERCICIO 3)-->
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>   
  <depend>turtlesim</depend>   
  <depend>geometry_msgs</depend>   

  

</package>
